fix step number getting squashed

--- a/src/molecules/steps/styles.css
+++ b/src/molecules/steps/styles.css
@@ -6,6 +6,10 @@
   display: flex;
 }
 
+.step > span > div {
+  flex: 1;
+}
+
 .step > span::before {
   align-self: center;
   border: 2px solid #17a2b8;
